# cmake_use

./: .gitignore  ReadMe.md
cmake01/: ReadMe.md  main.cpp
cmake02/src/: CMakeLists.txt
cmake03/lib/: CMakeLists.txt
cmake04/: CMakeLists.txt
cmake04/lib/: CMakeLists.txt  hello.cpp
cmake05/: CMakeLists.txt  ReadMe.md
cmake05/lib/: CMakeLists.txt  hello.h
cmake06/: ReadMe.md
cmake06/src/: CMakeLists.txt  main.cpp
cmake07/: CMakeLists.txt  ReadMe.md
cmake07/src/: CMakeLists.txt
